removes some warnings:
- redundant modifier
- Strings literals should be placed on the left side when checking for
equality
- boolean literals

Change-Id: I539c312a1aba5a95c1fd5248f12b42fe243a3957
Signed-off-by: Judith Gull <jgu@bsiag.com>
Reviewed-on: https://git.eclipse.org/r/30502
Tested-by: Hudson CI